syntax = "proto3";

package vega;
option go_package = "code.vegaprotocol.io/vega/protos/vega";

import "vega/data_source.proto";
import "vega/data/v1/data.proto";

// Oracle spec contains an embedded external data source spec.
// It will be generated by the compiler as: OracleSpec_ExternalDataSourceSpec_*
message OracleSpec {
  ExternalDataSourceSpec  external_data_source_spec = 1;
}

message OracleData {
  vega.data.v1.ExternalData external_data = 1;
}
